# SummaMeet-AI

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
apps/api/: check_status.py  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/: action_items.py  auth.py  bot.py  dashboard.py  health.py  meetings.py  organizations.py  projects.py  reports.py  transcript.py  users.py  ws.py
apps/api/app/core/: api_key_auth.py  audit.py  celery.py  config.py  errors.py  middleware.py  pagination.py  pubsub.py  security.py
apps/api/app/db/: seed.py  session.py
apps/api/app/models/: __init__.py  action_item.py  api_key.py  audio_chunk.py  audit_log.py  bot_session.py  meeting.py  meeting_participant.py  meeting_report.py  mixins.py  organization.py  project.py  refresh_token.py  report_artifact.py  transcript_segment.py  user.py
apps/api/app/schemas/: action_item.py  auth.py  bot.py  errors.py  meeting.py  organization.py  pagination.py  project.py  report.py  transcript.py  user.py  ws.py
apps/api/app/services/: auth_service.py
apps/api/app/tasks/: scheduler.py
apps/bot_worker/: Dockerfile  pyproject.toml  test_redirect.py
apps/bot_worker/bot_worker/: __init__.py  api_client.py  audio_capture.py  base_bot.py  celery_app.py  config.py  jitsi_bot.py  jitsi_selectors.py  meet_bot.py  minio_client.py  selectors.py  tasks.py
apps/pdf_worker/: Dockerfile  pyproject.toml
apps/pdf_worker/pdf_worker/: celery_app.py  tasks.py
apps/summarization_worker/: pyproject.toml
apps/summarization_worker/summarization_worker/: celery_app.py  db.py  llm_service.py  tasks.py
apps/transcription_worker/: pyproject.toml
apps/transcription_worker/transcription_worker/: __init__.py  api_client.py  celery_app.py  config.py  diarizer.py  minio_client.py  tasks.py  whisper_engine.py
apps/web/: .gitignore  package-lock.json
apps/web/src/app/dashboard/: layout.tsx  page.tsx
apps/web/src/app/dashboard/action-items/: page.tsx
apps/web/src/app/dashboard/meetings/[id]/: page.tsx
apps/web/src/app/dashboard/users/: page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/lib/: api.ts
db/alembic/: env.py
db/alembic/versions/: .gitkeep  471a89112166_add_audio_chunk_model.py  5897027ba978_initial.py
scripts/: generate_jwt_keys.py
