[project]
name = "pdf-worker"
version = "0.1.0"
description = "Celery worker for Playwright PDF generation"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.4.0",
    "playwright>=1.42.0",
    "structlog>=24.0.0",
    "python-dotenv>=1.0.0",
    "minio>=7.2.0",
    "common",
    "contracts"
]

[tool.uv.sources]
common = { workspace = true }
contracts = { workspace = true }
